# Rust-Crud-Operations

./: .gitignore  README.md
backend-actix-web/: Cargo.toml
backend-actix-web/src/: main.rs
frontend/src/: App.css  App.jsx
