[package]
name = "backend-actix-web"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"        # Actix Web framework
actix-cors = "0.7.0"       # CORS middleware for Actix Web
serde = { version = "1.0", features = ["derive"] } # For JSON serialization/deserialization
serde_json = "1.0"       # For handling JSON

